--- a/Portafolio/src/components/NavBar/NavBar.module.css
+++ b/Portafolio/src/components/NavBar/NavBar.module.css
@@ -5,6 +5,7 @@
   width: 100%; /* Ocupa el ancho completo de la ventana */
   background-color: #ffffff; /* Fondo del NavBar */
   z-index: 1000; /* Asegura que esté por encima de otros elementos */
+  box-shadow: 0 1px 4px rgba(146,161,176,.15);
 }
 
 .container {
@@ -63,7 +64,7 @@
     text-align: center;
     overflow: hidden; /* Habilitamos el desplazamiento vertical si el contenido supera la altura */
     width: 100%;
-    height: calc(100vh - 80px);
+    height: 92vh;
     z-index: -1;
     justify-content: center;
     align-items: center;
