Solo falta el estado para cambiar de idioma

--- a/Portafolio/src/components/Contact/Contact.module.css
+++ b/Portafolio/src/components/Contact/Contact.module.css
@@ -108,6 +108,8 @@
   .rigth {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+    border-bottom-left-radius: 3vw;
+    border-bottom-right-radius: 3vw;
   }
 
   .rigth img {
