--- a/Portafolio/src/components/About/About.module.css
+++ b/Portafolio/src/components/About/About.module.css
@@ -9,7 +9,6 @@
   display: flex;
   justify-content: center;
   margin: 6vw 9vw;
-  /* border: 1px solid black; */
 }
 
 .text {
@@ -35,12 +34,15 @@
 }
 
 .imgAimar2 {
-  border: 1px solid black;
-  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
 }
 
 .imgAimar {
-  width: 20%;
+  width: 70%;
+  border-radius: 50%;
 }
 
 @media (max-width: 768px) {
@@ -48,6 +50,10 @@
     flex-direction: column;
     align-items: center;
     margin-top: 13vw;
+  }
+
+  .imgAimar {
+    width: 90%;
   }
 
   .text {
