--- a/Portafolio/src/components/Works/Works.module.css
+++ b/Portafolio/src/components/Works/Works.module.css
@@ -71,6 +71,8 @@
 .imgWorks {
   width: 25rem;
   height: 15rem;
+  object-fit: cover;
+  object-position: center;
   border-radius: 1vw;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
     0 4px 6px -4px rgba(0, 0, 0, 0.1);
@@ -85,7 +87,7 @@
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  justify-content: space-between;
+  justify-content: space-evenly;
   width: 90%;
   margin: 0;
 }
@@ -130,7 +132,8 @@
 
   .imgWorks {
     width: 100%;
-    height: 11rem;
+    object-fit: cover;
+    object-position: center;
     border-radius: 3vw;
     box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.1), 0 2px 2px -2px rgba(0, 0, 0, 0.1);
   }  
