--- a/Portafolio/src/components/NavBar/NavBar.module.css
+++ b/Portafolio/src/components/NavBar/NavBar.module.css
@@ -20,6 +20,11 @@
   height: auto;
 }
 
+.btn {
+  display: flex;
+  align-items: center;
+}
+
 .btn button {
   font-family: "Nunito Sans", sans-serif;
   font-size: 15px;
@@ -28,10 +33,43 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
-  transition: color 0.3s ease;}
+  transition: color 0.3s ease;
+}
 
 .btn button:hover {
   color: #A6A6A6;
+}
+
+.btnNavBar button {
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 15px;
+  color: #767373;
+  margin-left: 10px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.btnNavBar button:hover {
+  color: #A6A6A6;
+}
+
+.changeId button {
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 15px;
+  background-color: transparent;
+  border: 2px solid #FFD600;
+  border-radius: 0.4vw;
+  margin-left: 2vw;
+  padding: 0.4vw 1vw;
+  transition: color 0.3s ease, background-color 0.3s ease;
+  cursor: pointer;
+}
+
+.changeId button:hover {
+  color: white;
+  background-color: #FFD600;
 }
 
 .menu {
