--- a/Portafolio/src/components/About/About.module.css
+++ b/Portafolio/src/components/About/About.module.css
@@ -30,7 +30,7 @@
   font-size: 15px;
   line-height: 20px;
   color: #7b7878;
-  margin: 0.7vw 0;
+  margin: 0.5vw 0;
 }
 
 .imgAimar2 {
@@ -63,13 +63,14 @@
   }
 
   .text h2 {
-    margin-bottom: 5vw;
+    margin-top: 2vw;
+    margin-bottom: 2vw;
   }
 
   .text p {
     font-size: 16px;
     padding: 4px;
     text-wrap: balance;
-    margin-bottom: 4vw;
+    margin-bottom: 1.5vw;
   }
 }
