--- a/Portafolio/src/components/Works/Works.module.css
+++ b/Portafolio/src/components/Works/Works.module.css
@@ -150,11 +150,12 @@
     display: flex;
     justify-content: center;
     font-size: 30px;
-    margin: 4vw;
+    margin-top: 6vw;
   }
 
   .info p {
     margin: 3vw;
+    padding: 0.5vw 0;
     text-align: center;
   }
 
