--- a/Portafolio/src/components/Contact/Contact.module.css
+++ b/Portafolio/src/components/Contact/Contact.module.css
@@ -92,6 +92,10 @@
     margin-bottom: 6vw;
   }
 
+  .left b {
+    padding-right: 1.2vw;
+  }
+
   .left p {
     display: flex;
     align-items: center;
